Fixed mobile alignment issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -166,7 +166,7 @@ img {
     float: left;
     width: 70%;
   }
-  .home{
+  .recent-posts{
     text-align: center;
   }
   .post-link{
